--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.example.projetmobile" >
+    package="com.example.projetmobile">
 
     <application
         android:allowBackup="true"
@@ -12,13 +12,25 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.ProjetMobile"
-        tools:targetApi="31" >
+        tools:targetApi="31">
+        <activity
+            android:parentActivityName=".HomePageActivity"
+            android:name=".ProfilActivity"
+            android:exported="false" />
+        <activity
+            android:parentActivityName=".HomePageActivity"
+            android:name=".ListeTravailActivity"
+            android:exported="false" />
+        <activity
+            android:parentActivityName=".HomePageActivity"
+            android:name=".AjouteTravailActivity"
+            android:exported="false" />
         <activity
             android:name=".LoginActivity"
             android:exported="false" />
         <activity
             android:name=".HomePageActivity"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
