--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,21 +14,26 @@
         android:theme="@style/Theme.ProjetMobile"
         tools:targetApi="31">
         <activity
+            android:label="Profil"
             android:parentActivityName=".HomePageActivity"
             android:name=".ProfilActivity"
             android:exported="false" />
         <activity
+            android:label="liste de travail"
             android:parentActivityName=".HomePageActivity"
             android:name=".ListeTravailActivity"
             android:exported="false" />
         <activity
+            android:label="Ajouter"
             android:parentActivityName=".HomePageActivity"
             android:name=".AjouteTravailActivity"
             android:exported="false" />
         <activity
+            android:label="Login"
             android:name=".LoginActivity"
             android:exported="false" />
         <activity
+            android:label="Accueil"
             android:name=".HomePageActivity"
             android:exported="true">
             <intent-filter>
